--- a/aiworkoutgen/core/templates/core/home.html
+++ b/aiworkoutgen/core/templates/core/home.html
@@ -20,12 +20,14 @@
                 <!--old history link was here moved for testing-->
                 {% if user.is_authenticated %}
 
-                <a href="{% url 'logout' %}" class="text-gray-600 hover:text-blue-500 transition duration-300">Logout</a>
+                <a href="{% url 'logout' %}"
+                    class="text-gray-600 hover:text-blue-500 transition duration-300">Logout</a>
                 <a href="{% url 'history' %}"
                     class="text-gray-600 hover:text-blue-500 transition duration-300">History</a>
                 {% else %}
                 <a href="{% url 'login' %}" class="text-gray-600 hover:text-blue-500 transition duration-300">Login</a>
-                <a href="{% url 'signup' %}" class="text-gray-600 hover:text-blue-500 transition duration-300">Sign-Up</a>
+                <a href="{% url 'signup' %}"
+                    class="text-gray-600 hover:text-blue-500 transition duration-300">Sign-Up</a>
                 {% endif %}
                 <!--<a href="{% url 'history' %}" class="text-gray-600 hover:text-red-500 transition duration-300">History</a>-->
                 <!--<button id="theme-toggle" class="text-gray-600 hover:text-red-500 transition duration-300">
@@ -161,7 +163,7 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-gray-400 py-6 mt-10 fixed bottom-0 w-full">
         <div class="container mx-auto flex justify-between items-center px-6">
-            <p> Application Development: Do you even lift, bruh?</p>
+            <p> Application Development: Do you even lift, brah?</p>
             <div class="flex space-x-4">
                 <a href="https://github.com/carucheo"
                     class="text-gray-400 hover:text-blue-500 transition duration-300">lalo</a>
