--- a/aiworkoutgen/core/templates/core/workout.html
+++ b/aiworkoutgen/core/templates/core/workout.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Workout Plan</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/alpinejs" defer></script>
 </head>
 
 <body class="bg-gray-100 text-gray-800 font-sans">
@@ -15,11 +16,12 @@
     <nav class="bg-white py-4 shadow-md fixed top-0 w-full z-10">
         <div class="container mx-auto flex justify-between items-center px-6">
             <a href="{% url 'home' %}">
-                <h1 class="text-2xl font-bold text-gray-900 hover:text-blue-500">AI Workout Generator</h1>
+                <h1 class="text-2xl font-bold text-gray-900 hover:text-blue-500 transition duration-300">AI Workout
+                    Generator</h1>
             </a>
             <div class="flex space-x-4 items-center">
-                <a href="{% url 'history' %}"
-                    class="text-gray-600 hover:text-blue-500 transition duration-300">History</a>
+                <!-- <a href="{% url 'history' %}"
+                    class="text-gray-600 hover:text-blue-500 transition duration-300">History</a> -->
                 {% if user.is_authenticated %}
                 <a href="#" class="text-gray-600 hover:text-blue-500 transition duration-300">Logout</a>
                 {% else %}
@@ -51,7 +53,7 @@
             <!-- Collapsible content for each exercise list -->
             <div x-data="{ open: false }">
                 <button @click="open = !open"
-                    class="text-gray-600 transition duration-300 font-semibold">
+                    class="text-gray-600 hover:text-blue-500 transition duration-300 font-semibold">
                     {{ section_name | title }} Details
                 </button>
                 <div x-show="open" class="space-y-4 mt-4">
@@ -88,7 +90,7 @@
 
     <footer class="bg-gray-800 text-gray-400 py-6 mt-10">
         <div class="container mx-auto flex justify-between items-center px-6">
-            <p> Application Development: Do you even lift, bruh?</p>
+            <p> Application Development: Do you even lift, brah?</p>
             <div class="flex space-x-4">
                 <a href="https://github.com/carucheo"
                     class="text-gray-400 hover:text-blue-500 transition duration-300">lalo</a>
