--- a/aiworkoutgen/core/templates/core/workout.html
+++ b/aiworkoutgen/core/templates/core/workout.html
@@ -27,9 +27,6 @@
                 {% else %}
                 <a href="{% url 'login' %}" class="text-gray-600 hover:text-blue-500 transition duration-300">Login</a>
                 {% endif %}
-                <!--<button id="theme-toggle" class="text-gray-600 hover:text-red-500 transition duration-300">
-                    Toggle Theme
-                </button>-->
             </div>
         </div>
     </nav>
@@ -88,6 +85,7 @@
         </div>
     </div>
 
+    <!-- Footer Start -->
     <footer class="bg-gray-800 text-gray-400 py-6 mt-10">
         <div class="container mx-auto flex justify-between items-center px-6">
             <p> Application Development: Do you even lift, brah?</p>
@@ -101,40 +99,8 @@
             </div>
         </div>
     </footer>
+    <!-- Footer End -->
 
-    <!--  Theme Toggle and Collapsible Interaction -->
-    <!-- JavaScript for Theme Toggle -->
-    <!--<script>
-        const themeToggle = document.getElementById('theme-toggle');
-        const body = document.body;
-
-        function toggleTheme() {
-            body.classList.toggle('bg-gray-900');
-            body.classList.toggle('text-gray-100');
-            body.classList.toggle('bg-gray-100');
-            body.classList.toggle('text-gray-800');
-
-            if (document.body.classList.contains('bg-gray-900')) {
-                localStorage.setItem('theme', 'dark');
-            } else {
-                localStorage.setItem('theme', 'light');
-            }
-        }
-
-        document.addEventListener('DOMContentLoaded', () => {
-            const savedTheme = localStorage.getItem('theme');
-
-            if (savedTheme === 'dark') {
-                document.body.classList.add('bg-gray-900', 'text-gray-100');
-                document.body.classList.remove('bg-gray-100', 'text-gray-800');
-            } else {
-                document.body.classList.add('bg-gray-100', 'text-gray-800');
-                document.body.classList.remove('bg-gray-900', 'text-gray-100');
-            }
-        });
-
-        themeToggle.addEventListener('click', toggleTheme);
-    </script>-->
 </body>
 
 </html>
