--- a/aiworkoutgen/core/templates/core/home.html
+++ b/aiworkoutgen/core/templates/core/home.html
@@ -18,6 +18,7 @@
             <h1 class="text-2xl font-bold text-gray-900">AI Workout Generator</h1>
             <div class="flex space-x-4 items-center">
                 <!--old history link was here moved for testing-->
+                <a href="{% url 'user_profile' %}" class="text-gray-600 hover:text-blue-500 transition duration-300">API Profile</a>
                 {% if user.is_authenticated %}
 
                 <a href="{% url 'logout' %}"
@@ -28,6 +29,7 @@
                 <a href="{% url 'login' %}" class="text-gray-600 hover:text-blue-500 transition duration-300">Login</a>
                 <a href="{% url 'signup' %}"
                     class="text-gray-600 hover:text-blue-500 transition duration-300">Sign-Up</a>
+                    
                 {% endif %}
             </div>
         </div>
